tests/ui/unexpected.stderr
error: unexpected input to #[proc_macro_hack]
 --> $DIR/tests/ui/unexpected.rs:4:5
  |
4 | pub struct What;
  |     ^^^^^^
